--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -1351,7 +1351,7 @@ button {
 }
 
 .fp__cart_popup_text .rating {
-    color: #ff9933;
+    color: #A67B5B;
     font-size: 14px;
     text-align: left;
     display: block;
@@ -1484,7 +1484,7 @@ button {
 }
 
 .fp__menu_item .fp__menu_item_text .rating {
-    color: #ff9933;
+    color: #A67B5B;
     font-size: 14px;
     text-align: center;
 }
@@ -1880,7 +1880,7 @@ button {
 }
 
 /* .fp__counter_overlay {
-    background: #f86f03ad;
+    background: #a67b5b94;
 } */
 
 .fp__counter_overlay {
@@ -2011,7 +2011,7 @@ button {
 }
 
 .fp__single_testimonial_body .rating {
-    color: #ff9933;
+    color: #A67B5B;
     font-size: 14px;
     text-align: center !important;
     display: block;
@@ -2485,7 +2485,7 @@ footer {
 
 .fp__breadcrumb_overlay {
     padding: 250px 0px 125px 0px;
-    background: #f86f03a3;
+    background: #a67b5b94;
     position: relative;
 }
 
@@ -3368,7 +3368,7 @@ footer {
 }
 
 .fp__single_comm_text .rating {
-    color: #ff9933;
+    color: #A67B5B;
     font-size: 14px;
     display: block;
     margin-top: 8px;
@@ -3647,7 +3647,7 @@ footer {
 }
 
 .fp__menu_details_text .rating {
-    color: #ff9933;
+    color: #A67B5B;
     font-size: 14px;
     text-align: left;
     display: block;
@@ -3927,7 +3927,7 @@ footer {
 }
 
 .fp__post_review form .rating i {
-    color: #ff9933;
+    color: #A67B5B;
     cursor: pointer;
     transition: all linear 0.3s;
     -webkit-transition: all linear 0.3s;
@@ -6385,7 +6385,7 @@ CHECKOUT PAGE START
 }
 
 .fp__testimonial_text2 .rating {
-    color: #ff9933;
+    color: #A67B5B;
     font-size: 14px;
     text-align: left;
     display: block;
